<resources>
    <string name="app_name">OrderApp</string>
    <string name="auth_error">Неправильный логин или пароль</string>
    <string name="orderlist_to_title">Куда:</string>
    <string name="empty_string">-</string>
    <string name="orderlist_to_place">to</string>
    <string name="orderlist_from_place">where</string>
    <string name="orderlist_from_title">Откуда:</string>
    <string name="orderlist_card_date">Дата</string>
    <string name="orderlist_card_title">Заказ %1d</string>
    <string name="menu_logout">Выйти</string>
    <string name="orderlist_toolbar_title">Текущие заказы</string>
    <string name="orderdetail_toolbar_title">Заказ %1d к %2s</string>
    <string name="sharedprefs_name">orderAppPrefs</string>
    <string name="auth_token">Token %1s</string>
    <string name="key_auth_token">auth_token</string>
    <string name="title_activity_order_map">Map</string>
    <string name="sp_key_server_ip">server_ip</string>
    <string name="reminder_text">Забыли пароль? Звоните  8–800-555-35-55</string>
</resources>
